@@ -2,9 +2,10 @@ OpenLDAP 2.3 Change Log
 
 OpenLDAP 2.3.38 Engineering
 	Fixed slapadd check for ';binary' when required (ITS#5071)
-	Fixed slapd AVA_Sort on multivalued RDNs (ITS#5057)
-	Fixed slapd integer/pointer types and overflow (ITS#5035)
 	Fixed slapd select_backend/ManageDSAit (ITS#4986)
+	Fixed slapd integer/pointer types and overflow (ITS#5035)
+	Fixed slapd AVA_Sort on multivalued RDNs (ITS#5057)
+	Fixed slapd syncrepl searchbase scope (ITS#5073)
 	Fixed slapd-bdb missing index warning (ITS#5037)
 	Fixed slapd-bdb Quick index for ID 0 (ITS#5052)
 	Fixed slapd-bdb spurious empty DN warnings during add (ITS#5079)
